2002-02-04  Laszlo Peter  <laca@ireland.sun.com>

	* libnautilus/nautilus-clipboard.[ch]: fix licensing info.

2002-02-01  Dave Camp  <dave@ximian.com>

	* configure.in: Increased GNOME_UI_REQUIRED to 1.110.1

	* libnautilus-private/nautilus-icon-container.c:
	(nautilus_icon_container_class_init): Use
	nautilus_marshal_VOID__POINTER_STRING instead of
	nautilus_marshal_VOID__POINTER_POINTER for the icon_text_changed
	signal.
	(handle_focus_out_event): Return FALSE.
	(nautilus_icon_container_start_renaming_selected_item),
	(end_renaming_mode): Use GnomeIconTextItem instead of
	NautilusIconTextItem.  This includes changing how the size was
	calculated, as NautilusIconTextItem expected a center point and
	maximum width, and GnomeIconTextItem expects a bounding box.

	* libnautilus-private/nautilus-icon-private.h: Use
	GnomeIconTextItem instead of NautilusIconTextItem for
	rename_widget.
	* libnautilus-private/nautilus-marshal.list: Added
	VOID:POINTER,STRING.
	* src/file-manager/fm-icon-view.c: (renaming_icon_callback):
	Temporarily #ifed out the
	nautilus_clipboard_set_up_editable_in_control for the renaming
	editable.

2002-01-31  John Harper  <jsh@unfactored.org>

	Make the search feature work again:

	* configure.in: fixed how HAVE_MEDUSA is defined. Add
	MEDUSA_CFLAGS to CORE_CFLAGS

	* src/file-manager/fm-search-list-view.c: moved some of the
	GNOME2_CONVERSION_COMPLETE ifdefs around so that we get a
	functional object, just without some of the features of the
	original

	* src/nautilus-shell-ui.xml: copied search parts from nautilus
	1 version

	* src/nautilus-application.c (create_object): reenable
	search-list-view creation

	* src/file-manager/nautilus-indexing-info.c: random changes to
	make it compile (untested as yet)

2002-01-30  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump eel version required.
	
	* libnautilus-private/nautilus-icon-container.c:
	(rubberband_timeout_callback), (start_rubberbanding),