@@ -20,7 +20,6 @@ intltool-update.in
 libtool
 ltconfig
 ltmain.sh
-nautilus-*.tar.gz
 nautilus.desktop
 nautilus.spec
 obj
