@@ -26,7 +26,7 @@ AC_SUBST(XML_REQUIRED)
 
 dnl ===========================================================================
 
-AM_INIT_AUTOMAKE(nautilus, 1.1.3)
+AM_INIT_AUTOMAKE(nautilus, 1.1.4)
 AM_CONFIG_HEADER(config.h)
 
 AM_SANITY_CHECK
