@@ -2,7 +2,7 @@
 <commands>
 	<cmd name="Rename"
          _label="Rename"
-	 _tip="Rename selected icon"/>
+	 _tip="Rename selected item"/>
 	<cmd name="Stretch"
          _label="Stretch Icon"
 	 _tip="Make the selected icon stretchable"/>
