@@ -1,4 +1,4 @@
-This is nautilus 1.1.3, an interim version in the process of
+This is nautilus 1.1.4, an interim version in the process of
 porting nautilus from the Gnome 1 platform to the Gnome 2 platform.
 
 A later release will document the changes since Gnome 1.
