@@ -1,3 +1,15 @@
+2002-02-04  Darin Adler  <darin@bentspoon.com>
+
+	* .cvsignore: Don't ignore tarballs.
+	* NEWS: Bump version number.
+	* configure.in: Bump version number.
+
+	* src/file-manager/fm-directory-view.c: (activate_callback):
+	Clean up code here a bit; patch submitted by David Emory Watson.
+
+	* src/file-manager/nautilus-icon-view-ui.xml: Tweak wording as
+	suggested by Steve Fox <drfickle@k-lug.org>.
+
 2002-02-04  Laszlo Peter  <laca@ireland.sun.com>
 
 	* libnautilus/nautilus-clipboard.[ch]: fix licensing info.
